fixed button hover bug (due to overlaping div)

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ button {
   padding-block: 0.667em;
 }
 button:hover {
-  background-color: var(--top-bg-color);
+  background-color:var(--top-bg-color);
   color: var(--highlight-hover-color);
 }
 .hero-img {
@@ -281,6 +281,15 @@ h3 {
     margin-top: -2em;
     margin-left: -10em;
     z-index: 2;
+    
+  }
+   .first-svg{
+    max-width: 5em;
+  }
+  .second-svg{
+    width: auto;
+    margin-top: 8em;
+    right: -3em;
   }
   .svg-2 {
     position: relative;
@@ -291,8 +300,8 @@ h3 {
     width: 8.813em;
     height: 7em;
     z-index: 3;
-    margin: auto 90%;
-    margin-top: 8em;
+    
+   
   }
   .hero-img {
     background-size: contain;
